--- a/public/app/components/effects/Visualization/view.html
+++ b/public/app/components/effects/Visualization/view.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="control-block stack-vertically">
+    <span class="label">Wave visualization</span>
+    <canvas class="visualizer"></canvas>
+</div>
