--- a/public/assets/stylesheets/stylesheet.css
+++ b/public/assets/stylesheets/stylesheet.css
@@ -25,10 +25,20 @@ master-gain {
   color: #fff;
   position: relative;
   background-color: #00b2a3; }
+  .device .device-disabled {
+    background-color: #209884; }
   .device .device-name {
     font-family: 'Aller Regular';
     text-align: center;
     margin-top: 10px; }
+  .device .delete-device-icon {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: #107161; }
+    .device .delete-device-icon:hover {
+      color: #d53e7a; }
   .device .settings-icon {
     cursor: pointer;
     position: absolute;
@@ -49,8 +59,6 @@ master-gain {
     color: #003b4a; }
   .device .toggle-device-state span.fa-toggle-off {
     color: #003b4a; }
-  .device.device-disabled {
-    background-color: #209884; }
   .device .note-preview {
     background-image: url("../images/notesheet-grid.png");
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
@@ -303,8 +311,12 @@ input {
           font-weight: 100; }
       #instrument-settings .settings-keyboard .keyboard .black {
         background-color: #000; }
+        #instrument-settings .settings-keyboard .keyboard .black.active {
+          background-color: #1a7370; }
       #instrument-settings .settings-keyboard .keyboard .white {
         background-color: #fff; }
+        #instrument-settings .settings-keyboard .keyboard .white.active {
+          background-color: #3bc2b5; }
   #instrument-settings .instrument-control-wrapper select {
     border: none;
     -webkit-border-radius: 5px;
@@ -343,6 +355,18 @@ input {
     display: inline-block;
     margin-right: 30px;
     position: relative; }
+  #instrument-settings .instrument-control-wrapper .effect {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px; }
+    #instrument-settings .instrument-control-wrapper .effect .close {
+      color: white;
+      cursor: pointer;
+      position: absolute;
+      top: 5px;
+      right: 5px; }
   #instrument-settings .instrument-control-wrapper .add-effect {
     width: 250px;
     height: 75px;
@@ -401,8 +425,7 @@ input {
         top: 4px;
         left: 29px; }
   #instrument-settings .instrument-control-wrapper .control-block {
-    margin-bottom: 25px;
-    width: 200px; }
+    margin-bottom: 25px; }
     #instrument-settings .instrument-control-wrapper .control-block .label {
       display: block;
       font-size: 1em;
@@ -440,5 +463,9 @@ input {
       margin-left: 20px;
       font-family: Raleway;
       font-size: 1.2em; }
+
+.visualizer {
+  width: 500px;
+  height: 250px; }
 
 /*# sourceMappingURL=stylesheet.css.map */
