--- a/public/app/components/effects/Visualization/view.html
+++ b/public/app/components/effects/Visualization/view.html
@@ -1,4 +1,4 @@
 <div class="control-block stack-vertically">
-    <span class="label">Wave visualization</span>
+    <span class="label">Visualization</span>
     <canvas class="visualizer"></canvas>
 </div>
