--- a/public/app/components/effects/reverb/view.html
+++ b/public/app/components/effects/reverb/view.html
@@ -1,7 +1,10 @@
 <div class="control-block stack-vertically">
     <span class="label">Reverb</span>
     <div class="label label-info">
-        Impulses used can be found in: <br/><a href="http://openairlib.net">www.openairlib.net</a>
+        Impulses are downloaded from: <br/>
+        <a href="http://www.openairlib.net/auralizationdb/content/st-andrews-church">St Andrew's Church, by Audiolab, University of York
+            Damian T. Murphy</a><br/>
+        <a href="http://www.openairlib.net/auralizationdb/content/underground-car-park">Underground Car Park, by www.twitter.com/chrisunderdown</a><br/>
     </div>
     <span class="label">Choose impulse: </span>
     <select ng-model="effect.impulse" ng-options="i.name for i in effect.params.impulses">
