--- a/public/assets/stylesheets/stylesheet.css
+++ b/public/assets/stylesheets/stylesheet.css
@@ -478,4 +478,18 @@ input {
   .footer a {
     color: #ffffff; }
 
+.x {
+  position: absolute;
+  z-index: 9999;
+  top: 167px;
+  left: -780px;
+  overflow: hidden;
+  width: 877px;
+  height: 407px; }
+  .x img {
+    width: 120%;
+    position: relative;
+    bottom: 111px;
+    left: -169px; }
+
 /*# sourceMappingURL=stylesheet.css.map */
