--- a/public/assets/stylesheets/stylesheet.scss
+++ b/public/assets/stylesheets/stylesheet.scss
@@ -585,3 +585,18 @@ input{
     color: #ffffff;
   }
 }
+.x {
+  position: absolute;
+  z-index: 9999;
+  top: 167px;
+  left: -780px;
+  overflow: hidden;
+  width: 877px;
+  height: 407px;
+  img {
+    width: 120%;
+    position: relative;
+    bottom: 111px;
+    left: -169px;
+  }
+}
