sampler, tuna effects, scheduler, midi output

--- a/public/app/components/midi_handler/view.html
+++ b/public/app/components/midi_handler/view.html
@@ -1,5 +1,5 @@
-<select ng-hide="activeDevice" ng-change="connect()" ng-model="activeDevice" ng-options="device.midi.name + ' - ' + device.user.name disable when device.user != null for device in devices">
+<select ng-hide="activeDevice" ng-change="connect()" ng-model="activeDevice" ng-options="device.midi.input.name + ' - ' + device.user.name disable when device.user != null for device in devices">
     <option value="" disabled="disabled">Choose midi device</option>
 </select>
-<div class="label label-primary" ng-hide="!activeDevice">{{activeDevice.midi.name}} - {{activeDevice.user.name}}</div>
+<div class="label label-primary" ng-hide="!activeDevice">{{activeDevice.midi.input.name}} - {{activeDevice.user.name}}</div>
 <span class="fa fa-close" ng-click="disconnect()" ng-hide="!activeDevice" style="cursor:pointer;"></span>
