--- a/public/app/components/device/view.html
+++ b/public/app/components/device/view.html
@@ -12,14 +12,5 @@
         <!--<button ng-click="openSettings()">settings</button>-->
     </div>
 
-    <div class="note-preview col-sm-9" notes-preview>
-        <div class="note-wrapper">
-            <div class="note" style="top:10px;left:10px;"></div>
-            <div class="note" style="top:10px;left: 160px;"></div>
-            <div class="note" style="top:10px;left: 430px;"></div>
-            <div class="note" style="top: 80px;left: 300px; width:100px;"></div>
-            <div class="note" style="top: 90px;left: 225px;"></div>
-            <div class="note" style="top: 53px;left: 21px;"></div>
-        </div>
-    </div>
+    <div class="note-preview col-sm-9" notes-preview></div>
 
